--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -46,9 +46,14 @@ jobs:
           arguments: assembleRelease
           gradle-version: 7.3.3
 
-      - name: Move to release
+      - name: Install Uber APK Signer
         run: |
-          cp ./app/build/outputs/apk/release/app-release-unsigned.apk ostorlab_insecure_app.apk
+          wget https://github.com/patrickfav/uber-apk-signer/releases/download/v1.3.0/uber-apk-signer-1.3.0.jar
+          sudo mv uber-apk-signer-1.3.0.jar /usr/local/bin/uber-apk-signer.jar
+
+      - name: Sign APK
+        run: |
+          java -jar /usr/local/bin/uber-apk-signer.jar --apks ./app/build/outputs/apk/release/app-release-unsigned.apk -o ./ostorlab_insecure_app.apk
 
       - name: Release
         uses: softprops/action-gh-release@v1
