--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -49,28 +49,17 @@ jobs:
       - name: Install Uber APK Signer
         run: |
           wget https://github.com/patrickfav/uber-apk-signer/releases/download/v1.3.0/uber-apk-signer-1.3.0.jar
-          sudo mv uber-apk-signer-1.3.0.jar /usr/local/bin/uber-apk-signer.jar
 
       - name: Sign APK
         run: |
-          java -jar /usr/local/bin/uber-apk-signer.jar --apks ./app/build/outputs/apk/release/app-release-unsigned.apk -o ostorlab_insecure_app
+          java -jar uber-apk-signer-1.3.0.jar --apks ./app/build/outputs/apk/release/app-release-unsigned.apk -o ostorlab_insecure_app
 
       - name: Move to release
         run: |
-          cp /home/runner/work/ostorlab_insecure_android_app/ostorlab_insecure_android_app/ostorlab_insecure_app/app-release-aligned-debugSigned.apk ostorlab_insecure_app.apk
+          cp ./ostorlab_insecure_app/app-release-aligned-debugSigned.apk ostorlab_insecure_app.apk
 
       - name: Release
         uses: softprops/action-gh-release@v1
         with:
           files: |
             ./ostorlab_insecure_app.apk
-
-      - name: Launch Ostorlab Full Scan with just Login Credentials
-        uses: Ostorlab/ostorlab_actions@v1.1.1
-        with:
-          scan_profile: full_scan
-          asset_type: android-apk
-          target: ./ostorlab_insecure_app.apk
-          scan_title: Scan App
-          ostorlab_api_key: ${{ secrets.OSTORLAB_API_KEY }}
-          extra: --test-credentials-name "phone number" --test-credentials-value 2312132 --test-credentials-name "pin" --test-credentials-value 213212
