--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -63,3 +63,13 @@ jobs:
         with:
           files: |
             ./ostorlab_insecure_app.apk
+
+      - name: Launch Ostorlab Full Scan with just Login Credentials
+        uses: Ostorlab/ostorlab_actions@v2.0.0
+        with:
+          scan_profile: full_scan
+          asset_type: android-apk
+          target: ./ostorlab_insecure_app.apk
+          scan_title: Scan App
+          ostorlab_api_key: ${{ secrets.OSTORLAB_API_KEY }}
+          extra: --test-credentials-name "phone number" --test-credentials-value 2312132 --test-credentials-name "pin" --test-credentials-value 213212
